[gd_scene load_steps=126 format=2]

[ext_resource path="res://cycle/decorations/disco_ball/beeg_disco/big_disco.gd" type="Script" id=1]
[ext_resource path="res://cycle/decorations/disco_ball/beeg_disco/big_disco_flat.png" type="Texture" id=2]
[ext_resource path="res://cycle/finale.ogg" type="AudioStream" id=3]

[sub_resource type="AtlasTexture" id=124]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 127, 127 )

[sub_resource type="AtlasTexture" id=125]
atlas = ExtResource( 2 )
region = Rect2( 127, 0, 127, 127 )

[sub_resource type="AtlasTexture" id=126]
atlas = ExtResource( 2 )
region = Rect2( 254, 0, 127, 127 )

[sub_resource type="AtlasTexture" id=127]
atlas = ExtResource( 2 )
region = Rect2( 381, 0, 127, 127 )

[sub_resource type="AtlasTexture" id=128]
atlas = ExtResource( 2 )
region = Rect2( 508, 0, 127, 127 )

[sub_resource type="AtlasTexture" id=129]
atlas = ExtResource( 2 )
region = Rect2( 635, 0, 127, 127 )

[sub_resource type="AtlasTexture" id=130]
atlas = ExtResource( 2 )
region = Rect2( 762, 0, 127, 127 )

[sub_resource type="AtlasTexture" id=131]
atlas = ExtResource( 2 )
region = Rect2( 889, 0, 127, 127 )

[sub_resource type="AtlasTexture" id=132]
atlas = ExtResource( 2 )
region = Rect2( 1016, 0, 127, 127 )

[sub_resource type="AtlasTexture" id=133]
atlas = ExtResource( 2 )
region = Rect2( 1143, 0, 127, 127 )

[sub_resource type="AtlasTexture" id=134]
atlas = ExtResource( 2 )
region = Rect2( 1270, 0, 127, 127 )

[sub_resource type="AtlasTexture" id=135]
atlas = ExtResource( 2 )
region = Rect2( 0, 127, 127, 127 )

[sub_resource type="AtlasTexture" id=136]
atlas = ExtResource( 2 )
region = Rect2( 127, 127, 127, 127 )

[sub_resource type="AtlasTexture" id=137]
atlas = ExtResource( 2 )
region = Rect2( 254, 127, 127, 127 )

[sub_resource type="AtlasTexture" id=138]
atlas = ExtResource( 2 )
region = Rect2( 381, 127, 127, 127 )

[sub_resource type="AtlasTexture" id=139]
atlas = ExtResource( 2 )
region = Rect2( 508, 127, 127, 127 )

[sub_resource type="AtlasTexture" id=140]
atlas = ExtResource( 2 )
region = Rect2( 635, 127, 127, 127 )

[sub_resource type="AtlasTexture" id=141]
atlas = ExtResource( 2 )
region = Rect2( 762, 127, 127, 127 )

[sub_resource type="AtlasTexture" id=142]
atlas = ExtResource( 2 )
region = Rect2( 889, 127, 127, 127 )

[sub_resource type="AtlasTexture" id=143]
atlas = ExtResource( 2 )
region = Rect2( 1016, 127, 127, 127 )

[sub_resource type="AtlasTexture" id=144]
atlas = ExtResource( 2 )
region = Rect2( 1143, 127, 127, 127 )

[sub_resource type="AtlasTexture" id=145]
atlas = ExtResource( 2 )
region = Rect2( 1270, 127, 127, 127 )

[sub_resource type="AtlasTexture" id=146]
atlas = ExtResource( 2 )
region = Rect2( 0, 254, 127, 127 )

[sub_resource type="AtlasTexture" id=147]
atlas = ExtResource( 2 )
region = Rect2( 127, 254, 127, 127 )

[sub_resource type="AtlasTexture" id=148]
atlas = ExtResource( 2 )
region = Rect2( 254, 254, 127, 127 )

[sub_resource type="AtlasTexture" id=149]
atlas = ExtResource( 2 )
region = Rect2( 381, 254, 127, 127 )

[sub_resource type="AtlasTexture" id=150]
atlas = ExtResource( 2 )
region = Rect2( 508, 254, 127, 127 )

[sub_resource type="AtlasTexture" id=151]
atlas = ExtResource( 2 )
region = Rect2( 635, 254, 127, 127 )

[sub_resource type="AtlasTexture" id=152]
atlas = ExtResource( 2 )
region = Rect2( 762, 254, 127, 127 )

[sub_resource type="AtlasTexture" id=153]
atlas = ExtResource( 2 )
region = Rect2( 889, 254, 127, 127 )

[sub_resource type="AtlasTexture" id=154]
atlas = ExtResource( 2 )
region = Rect2( 1016, 254, 127, 127 )

[sub_resource type="AtlasTexture" id=155]
atlas = ExtResource( 2 )
region = Rect2( 1143, 254, 127, 127 )

[sub_resource type="AtlasTexture" id=156]
atlas = ExtResource( 2 )
region = Rect2( 1270, 254, 127, 127 )

[sub_resource type="AtlasTexture" id=157]
atlas = ExtResource( 2 )
region = Rect2( 0, 381, 127, 127 )

[sub_resource type="AtlasTexture" id=158]
atlas = ExtResource( 2 )
region = Rect2( 127, 381, 127, 127 )

[sub_resource type="AtlasTexture" id=159]
atlas = ExtResource( 2 )
region = Rect2( 254, 381, 127, 127 )

[sub_resource type="AtlasTexture" id=160]
atlas = ExtResource( 2 )
region = Rect2( 381, 381, 127, 127 )

[sub_resource type="AtlasTexture" id=161]
atlas = ExtResource( 2 )
region = Rect2( 508, 381, 127, 127 )

[sub_resource type="AtlasTexture" id=162]
atlas = ExtResource( 2 )
region = Rect2( 635, 381, 127, 127 )

[sub_resource type="AtlasTexture" id=163]
atlas = ExtResource( 2 )
region = Rect2( 762, 381, 127, 127 )

[sub_resource type="AtlasTexture" id=164]
atlas = ExtResource( 2 )
region = Rect2( 889, 381, 127, 127 )

[sub_resource type="AtlasTexture" id=165]
atlas = ExtResource( 2 )
region = Rect2( 1016, 381, 127, 127 )

[sub_resource type="AtlasTexture" id=166]
atlas = ExtResource( 2 )
region = Rect2( 1143, 381, 127, 127 )

[sub_resource type="AtlasTexture" id=167]
atlas = ExtResource( 2 )
region = Rect2( 1270, 381, 127, 127 )

[sub_resource type="AtlasTexture" id=168]
atlas = ExtResource( 2 )
region = Rect2( 0, 508, 127, 127 )

[sub_resource type="AtlasTexture" id=169]
atlas = ExtResource( 2 )
region = Rect2( 127, 508, 127, 127 )

[sub_resource type="AtlasTexture" id=170]
atlas = ExtResource( 2 )
region = Rect2( 254, 508, 127, 127 )

[sub_resource type="AtlasTexture" id=171]
atlas = ExtResource( 2 )
region = Rect2( 381, 508, 127, 127 )

[sub_resource type="AtlasTexture" id=172]
atlas = ExtResource( 2 )
region = Rect2( 508, 508, 127, 127 )

[sub_resource type="AtlasTexture" id=173]
atlas = ExtResource( 2 )
region = Rect2( 635, 508, 127, 127 )

[sub_resource type="AtlasTexture" id=174]
atlas = ExtResource( 2 )
region = Rect2( 762, 508, 127, 127 )

[sub_resource type="AtlasTexture" id=175]
atlas = ExtResource( 2 )
region = Rect2( 889, 508, 127, 127 )

[sub_resource type="AtlasTexture" id=176]
atlas = ExtResource( 2 )
region = Rect2( 1016, 508, 127, 127 )

[sub_resource type="AtlasTexture" id=177]
atlas = ExtResource( 2 )
region = Rect2( 1143, 508, 127, 127 )

[sub_resource type="AtlasTexture" id=178]
atlas = ExtResource( 2 )
region = Rect2( 1270, 508, 127, 127 )

[sub_resource type="AtlasTexture" id=179]
atlas = ExtResource( 2 )
region = Rect2( 0, 635, 127, 127 )

[sub_resource type="AtlasTexture" id=180]
atlas = ExtResource( 2 )
region = Rect2( 127, 635, 127, 127 )

[sub_resource type="AtlasTexture" id=181]
atlas = ExtResource( 2 )
region = Rect2( 254, 635, 127, 127 )

[sub_resource type="AtlasTexture" id=182]
atlas = ExtResource( 2 )
region = Rect2( 381, 635, 127, 127 )

[sub_resource type="AtlasTexture" id=183]
atlas = ExtResource( 2 )
region = Rect2( 508, 635, 127, 127 )

[sub_resource type="AtlasTexture" id=184]
atlas = ExtResource( 2 )
region = Rect2( 635, 635, 127, 127 )

[sub_resource type="AtlasTexture" id=185]
atlas = ExtResource( 2 )
region = Rect2( 762, 635, 127, 127 )

[sub_resource type="AtlasTexture" id=186]
atlas = ExtResource( 2 )
region = Rect2( 889, 635, 127, 127 )

[sub_resource type="AtlasTexture" id=187]
atlas = ExtResource( 2 )
region = Rect2( 1016, 635, 127, 127 )

[sub_resource type="AtlasTexture" id=188]
atlas = ExtResource( 2 )
region = Rect2( 1143, 635, 127, 127 )

[sub_resource type="AtlasTexture" id=189]
atlas = ExtResource( 2 )
region = Rect2( 1270, 635, 127, 127 )

[sub_resource type="AtlasTexture" id=190]
atlas = ExtResource( 2 )
region = Rect2( 0, 762, 127, 127 )

[sub_resource type="AtlasTexture" id=191]
atlas = ExtResource( 2 )
region = Rect2( 127, 762, 127, 127 )

[sub_resource type="AtlasTexture" id=192]
atlas = ExtResource( 2 )
region = Rect2( 254, 762, 127, 127 )

[sub_resource type="AtlasTexture" id=193]
atlas = ExtResource( 2 )
region = Rect2( 381, 762, 127, 127 )

[sub_resource type="AtlasTexture" id=194]
atlas = ExtResource( 2 )
region = Rect2( 508, 762, 127, 127 )

[sub_resource type="AtlasTexture" id=195]
atlas = ExtResource( 2 )
region = Rect2( 635, 762, 127, 127 )

[sub_resource type="AtlasTexture" id=196]
atlas = ExtResource( 2 )
region = Rect2( 762, 762, 127, 127 )

[sub_resource type="AtlasTexture" id=197]
atlas = ExtResource( 2 )
region = Rect2( 889, 762, 127, 127 )

[sub_resource type="AtlasTexture" id=198]
atlas = ExtResource( 2 )
region = Rect2( 1016, 762, 127, 127 )

[sub_resource type="AtlasTexture" id=199]
atlas = ExtResource( 2 )
region = Rect2( 1143, 762, 127, 127 )

[sub_resource type="AtlasTexture" id=200]
atlas = ExtResource( 2 )
region = Rect2( 1270, 762, 127, 127 )

[sub_resource type="AtlasTexture" id=201]
atlas = ExtResource( 2 )
region = Rect2( 0, 889, 127, 127 )

[sub_resource type="AtlasTexture" id=202]
atlas = ExtResource( 2 )
region = Rect2( 127, 889, 127, 127 )

[sub_resource type="AtlasTexture" id=203]
atlas = ExtResource( 2 )
region = Rect2( 254, 889, 127, 127 )

[sub_resource type="AtlasTexture" id=204]
atlas = ExtResource( 2 )
region = Rect2( 381, 889, 127, 127 )

[sub_resource type="AtlasTexture" id=205]
atlas = ExtResource( 2 )
region = Rect2( 508, 889, 127, 127 )

[sub_resource type="AtlasTexture" id=206]
atlas = ExtResource( 2 )
region = Rect2( 635, 889, 127, 127 )

[sub_resource type="AtlasTexture" id=207]
atlas = ExtResource( 2 )
region = Rect2( 762, 889, 127, 127 )

[sub_resource type="AtlasTexture" id=208]
atlas = ExtResource( 2 )
region = Rect2( 889, 889, 127, 127 )

[sub_resource type="AtlasTexture" id=209]
atlas = ExtResource( 2 )
region = Rect2( 1016, 889, 127, 127 )

[sub_resource type="AtlasTexture" id=210]
atlas = ExtResource( 2 )
region = Rect2( 1143, 889, 127, 127 )

[sub_resource type="AtlasTexture" id=211]
atlas = ExtResource( 2 )
region = Rect2( 1270, 889, 127, 127 )

[sub_resource type="AtlasTexture" id=212]
atlas = ExtResource( 2 )
region = Rect2( 0, 1016, 127, 127 )

[sub_resource type="AtlasTexture" id=213]
atlas = ExtResource( 2 )
region = Rect2( 127, 1016, 127, 127 )

[sub_resource type="AtlasTexture" id=214]
atlas = ExtResource( 2 )
region = Rect2( 254, 1016, 127, 127 )

[sub_resource type="AtlasTexture" id=215]
atlas = ExtResource( 2 )
region = Rect2( 381, 1016, 127, 127 )

[sub_resource type="AtlasTexture" id=216]
atlas = ExtResource( 2 )
region = Rect2( 508, 1016, 127, 127 )

[sub_resource type="AtlasTexture" id=217]
atlas = ExtResource( 2 )
region = Rect2( 635, 1016, 127, 127 )

[sub_resource type="AtlasTexture" id=218]
atlas = ExtResource( 2 )
region = Rect2( 762, 1016, 127, 127 )

[sub_resource type="AtlasTexture" id=219]
atlas = ExtResource( 2 )
region = Rect2( 889, 1016, 127, 127 )

[sub_resource type="AtlasTexture" id=220]
atlas = ExtResource( 2 )
region = Rect2( 1016, 1016, 127, 127 )

[sub_resource type="AtlasTexture" id=221]
atlas = ExtResource( 2 )
region = Rect2( 1143, 1016, 127, 127 )

[sub_resource type="AtlasTexture" id=222]
atlas = ExtResource( 2 )
region = Rect2( 1270, 1016, 127, 127 )

[sub_resource type="AtlasTexture" id=223]
atlas = ExtResource( 2 )
region = Rect2( 0, 1143, 127, 127 )

[sub_resource type="AtlasTexture" id=224]
atlas = ExtResource( 2 )
region = Rect2( 127, 1143, 127, 127 )

[sub_resource type="AtlasTexture" id=225]
atlas = ExtResource( 2 )
region = Rect2( 254, 1143, 127, 127 )

[sub_resource type="AtlasTexture" id=226]
atlas = ExtResource( 2 )
region = Rect2( 381, 1143, 127, 127 )

[sub_resource type="AtlasTexture" id=227]
atlas = ExtResource( 2 )
region = Rect2( 508, 1143, 127, 127 )

[sub_resource type="AtlasTexture" id=228]
atlas = ExtResource( 2 )
region = Rect2( 635, 1143, 127, 127 )

[sub_resource type="AtlasTexture" id=229]
atlas = ExtResource( 2 )
region = Rect2( 762, 1143, 127, 127 )

[sub_resource type="AtlasTexture" id=230]
atlas = ExtResource( 2 )
region = Rect2( 889, 1143, 127, 127 )

[sub_resource type="AtlasTexture" id=231]
atlas = ExtResource( 2 )
region = Rect2( 1016, 1143, 127, 127 )

[sub_resource type="AtlasTexture" id=232]
atlas = ExtResource( 2 )
region = Rect2( 1143, 1143, 127, 127 )

[sub_resource type="AtlasTexture" id=233]
atlas = ExtResource( 2 )
region = Rect2( 1270, 1143, 127, 127 )

[sub_resource type="AtlasTexture" id=234]
atlas = ExtResource( 2 )
region = Rect2( 0, 1270, 127, 127 )

[sub_resource type="AtlasTexture" id=235]
atlas = ExtResource( 2 )
region = Rect2( 127, 1270, 127, 127 )

[sub_resource type="AtlasTexture" id=236]
atlas = ExtResource( 2 )
region = Rect2( 254, 1270, 127, 127 )

[sub_resource type="AtlasTexture" id=237]
atlas = ExtResource( 2 )
region = Rect2( 381, 1270, 127, 127 )

[sub_resource type="AtlasTexture" id=238]
atlas = ExtResource( 2 )
region = Rect2( 508, 1270, 127, 127 )

[sub_resource type="AtlasTexture" id=239]
atlas = ExtResource( 2 )
region = Rect2( 635, 1270, 127, 127 )

[sub_resource type="AtlasTexture" id=240]
atlas = ExtResource( 2 )
region = Rect2( 762, 1270, 127, 127 )

[sub_resource type="AtlasTexture" id=241]
atlas = ExtResource( 2 )
region = Rect2( 889, 1270, 127, 127 )

[sub_resource type="AtlasTexture" id=242]
atlas = ExtResource( 2 )
region = Rect2( 1016, 1270, 127, 127 )

[sub_resource type="AtlasTexture" id=243]
atlas = ExtResource( 2 )
region = Rect2( 1143, 1270, 127, 127 )

[sub_resource type="SpriteFrames" id=123]
animations = [ {
"frames": [ SubResource( 124 ), SubResource( 125 ), SubResource( 126 ), SubResource( 127 ), SubResource( 128 ), SubResource( 129 ), SubResource( 130 ), SubResource( 131 ), SubResource( 132 ), SubResource( 133 ), SubResource( 134 ), SubResource( 135 ), SubResource( 136 ), SubResource( 137 ), SubResource( 138 ), SubResource( 139 ), SubResource( 140 ), SubResource( 141 ), SubResource( 142 ), SubResource( 143 ), SubResource( 144 ), SubResource( 145 ), SubResource( 146 ), SubResource( 147 ), SubResource( 148 ), SubResource( 149 ), SubResource( 150 ), SubResource( 151 ), SubResource( 152 ), SubResource( 153 ), SubResource( 154 ), SubResource( 155 ), SubResource( 156 ), SubResource( 157 ), SubResource( 158 ), SubResource( 159 ), SubResource( 160 ), SubResource( 161 ), SubResource( 162 ), SubResource( 163 ), SubResource( 164 ), SubResource( 165 ), SubResource( 166 ), SubResource( 167 ), SubResource( 168 ), SubResource( 169 ), SubResource( 170 ), SubResource( 171 ), SubResource( 172 ), SubResource( 173 ), SubResource( 174 ), SubResource( 175 ), SubResource( 176 ), SubResource( 177 ), SubResource( 178 ), SubResource( 179 ), SubResource( 180 ), SubResource( 181 ), SubResource( 182 ), SubResource( 183 ), SubResource( 184 ), SubResource( 185 ), SubResource( 186 ), SubResource( 187 ), SubResource( 188 ), SubResource( 189 ), SubResource( 190 ), SubResource( 191 ), SubResource( 192 ), SubResource( 193 ), SubResource( 194 ), SubResource( 195 ), SubResource( 196 ), SubResource( 197 ), SubResource( 198 ), SubResource( 199 ), SubResource( 200 ), SubResource( 201 ), SubResource( 202 ), SubResource( 203 ), SubResource( 204 ), SubResource( 205 ), SubResource( 206 ), SubResource( 207 ), SubResource( 208 ), SubResource( 209 ), SubResource( 210 ), SubResource( 211 ), SubResource( 212 ), SubResource( 213 ), SubResource( 214 ), SubResource( 215 ), SubResource( 216 ), SubResource( 217 ), SubResource( 218 ), SubResource( 219 ), SubResource( 220 ), SubResource( 221 ), SubResource( 222 ), SubResource( 223 ), SubResource( 224 ), SubResource( 225 ), SubResource( 226 ), SubResource( 227 ), SubResource( 228 ), SubResource( 229 ), SubResource( 230 ), SubResource( 231 ), SubResource( 232 ), SubResource( 233 ), SubResource( 234 ), SubResource( 235 ), SubResource( 236 ), SubResource( 237 ), SubResource( 238 ), SubResource( 239 ), SubResource( 240 ), SubResource( 241 ), SubResource( 242 ), SubResource( 243 ) ],
"loop": true,
"name": "default",
"speed": 60.0
} ]

[sub_resource type="RectangleShape2D" id=122]
extents = Vector2( 215, 189 )

[node name="big_disco" type="AnimatedSprite"]
z_index = 30
frames = SubResource( 123 )
script = ExtResource( 1 )

[node name="area_2d" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="collision_shape_2d" type="CollisionShape2D" parent="area_2d"]
visible = false
shape = SubResource( 122 )

[node name="tween" type="Tween" parent="."]

[node name="truth_interval" type="Timer" parent="."]
one_shot = true

[node name="win_timer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[node name="finale_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Effects"

[node name="tween" type="Tween" parent="finale_sfx"]
